--- a/MacAppIntro/Base.lproj/Main.storyboard
+++ b/MacAppIntro/Base.lproj/Main.storyboard
@@ -1,8 +1,10 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="10117"/>
+        <deployment identifier="macosx"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="13771"/>
         <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Application-->
@@ -656,6 +658,9 @@
                         <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
                         <rect key="contentRect" x="196" y="240" width="545" height="301"/>
                         <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
+                        <connections>
+                            <outlet property="delegate" destination="B8D-0N-5wS" id="QxH-5m-Vcn"/>
+                        </connections>
                     </window>
                     <connections>
                         <segue destination="XfG-lQ-9wD" kind="relationship" relationship="window.shadowedContentViewController" id="cq2-FE-JQM"/>
@@ -686,7 +691,7 @@
                                 </textFieldCell>
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="cbJ-PQ-zkt">
-                                <rect key="frame" x="34" y="954" width="300" height="37"/>
+                                <rect key="frame" x="34" y="955" width="300" height="36"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="296" id="I87-4Y-RCX"/>
                                 </constraints>
@@ -697,7 +702,7 @@
                                 </textFieldCell>
                             </textField>
                             <button translatesAutoresizingMaskIntoConstraints="NO" id="xiT-eS-zZC">
-                                <rect key="frame" x="677" y="948" width="238" height="47"/>
+                                <rect key="frame" x="677" y="948" width="238" height="48"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="234" id="dwQ-9A-8qC"/>
                                 </constraints>
@@ -710,7 +715,7 @@
                                 </buttonCell>
                             </button>
                             <button translatesAutoresizingMaskIntoConstraints="NO" id="6Mr-qv-Ydv">
-                                <rect key="frame" x="435" y="948" width="238" height="47"/>
+                                <rect key="frame" x="435" y="948" width="238" height="48"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="234" id="MLx-zT-tEn"/>
                                 </constraints>
@@ -804,7 +809,6 @@
                                             </connections>
                                         </tableView>
                                     </subviews>
-                                    <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </clipView>
                                 <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="Oa3-XR-98Z">
                                     <rect key="frame" x="1" y="7" width="0.0" height="16"/>
